Correction affichage erreur